--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href="./bicicletas.html">Escolha a sua</a>
       </div>
-      <img src="./img/fotos/introducao.jpg" alt="Bicicleta Elétrica Preta">
+      <div>
+        <img src="./img/fotos/introducao.jpg" alt="Bicicleta Elétrica Preta">
+      </div>
+
     </div>
   </main>
 </body>
