--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="pt-br">
 
 <head>
+  <title>Bikcraft - Bicicletas Elétricas</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Bikcraft - Bicicletas Elétricas</title>
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -15,7 +20,7 @@
     <div class="header">
       <a href="./"><img src="./img/bikcraft.svg" alt="bikcraft"></a>
       <nav aria-label="primaria">
-        <ul class="header-menu">
+        <ul class="header-menu font-1-m cor-0">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -27,16 +32,17 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1>Bicicletas feitas sob medida<span>.</span></h1>
-        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a href="./bicicletas.html">Escolha a sua</a>
+        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao" href="./bicicletas.html">Escolha a sua</a>
       </div>
       <div>
         <img src="./img/fotos/introducao.jpg" alt="Bicicleta Elétrica Preta">
       </div>
-
     </div>
   </main>
+
+  <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
 </body>
 
 </html>
