--- a/bicicletas.html
+++ b/bicicletas.html
@@ -67,7 +67,7 @@
           <span class="font-2-m cor-0">R$ 2499</span>
         </div>
         <div class="bicicletas-conteudo">
-          <h2 class="font-1-xl cor-0">Megic Might</h2>
+          <h2 class="font-1-xl cor-0">Magic Might</h2>
           <p class="font-2-s cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
 
           <ul class="font-1-m cor-5">
