--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-  <title>Nimbus | Bikcraft</title>
+  <title>Nebula | Bikcraft</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,18 +32,18 @@
   <main class="titulo-bg">
     <div>
       <div class="titulo container">
-        <p class="font-2-xl cor-5">R$ 4999</p>
-        <h1 class="font-1-xxl cor-0">Nimbus Stark<span class="cor-p1">.</span></h1>
+        <p class="font-2-xl cor-5">R$ 3999</p>
+        <h1 class="font-1-xxl cor-0">Nebula Cosmic<span class="cor-p1">.</span></h1>
       </div>
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
+        <img src="../img/bicicleta/nimbus3.jpg" alt="">
         <img src="../img/bicicleta/nimbus1.jpg" alt="">
         <img src="../img/bicicleta/nimbus2.jpg" alt="">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l cor-5">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a class="botao" href="../orcamento.html">Comprar Agora</a>
           <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
@@ -59,7 +59,7 @@
           </li>
           <li>
             <img src="../img/icones/velocidade.svg" alt="">
-            <h3 class="font-1-m cor-0">50km/h</h3>
+            <h3 class="font-1-m cor-0">40km/h</h3>
             <p class="font-2-xs cor-5">A mais rápida bicicleta elétrica disponível hoje no mercado.
             </p>
           </li>
@@ -99,10 +99,10 @@
         </a>
       </li>
       <li>
-        <a href="./Nebula.html">
-          <img src="../img/bicicletas/Nebula.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Nebula Cosmic</h3>
-          <span class="font-2-m cor-8">R$ 3999</span>
+        <a href="./nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
     </ul>
