--- a/bicicletas.html
+++ b/bicicletas.html
@@ -108,18 +108,6 @@
       </div>
     </div>
   </main>
-
-
-
-
-
-
-
-
-
-
-
-
   <footer class="footer-bg">
     <div class="footer container">
       <img src="./img/bikcraft.svg" alt="Bikcraft">
@@ -158,6 +146,7 @@
     </div>
   </footer>
 
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
