--- a/seguros.html
+++ b/seguros.html
@@ -48,7 +48,7 @@
           <li>Suporte 08h às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a href="./orcamento.html" class="botao secundario">Inscreva-se</a>
+        <a href="./orcamento.html?tipo=seguro&produto=prata" class="botao secundario">Inscreva-se</a>
       </div>
 
       <div class="seguros-item">
@@ -63,7 +63,7 @@
           <li>Desconto em parceiros</li>
           <li>Acesso ao clube Bikcraft</li>
         </ul>
-        <a href="./orcamento.html" class="botao">Inscreva-se</a>
+        <a href="./orcamento.html?tipo=seguro&produto=ouro" class="botao">Inscreva-se</a>
       </div>
     </div>
   </main>
@@ -170,6 +170,7 @@
     </div>
   </footer>
 
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
