--- a/termos.html
+++ b/termos.html
@@ -55,17 +55,6 @@
     </div>
   </main>
 
-
-
-
-
-
-
-
-
-
-
-
   <footer class="footer-bg">
     <div class="footer container">
       <img src="./img/bikcraft.svg" alt="Bikcraft">
@@ -104,6 +93,7 @@
     </div>
   </footer>
 
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
