--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+  <script>document.documentElement.classList.add('js')</script>
 </head>
 
 <body>
@@ -54,14 +56,14 @@
         </a>
       </li>
       <li>
-        <a href="./bicicletas/Nimbus.html">
+        <a href="./bicicletas/nimbus.html">
           <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nimbus Stark</h3>
           <span class="font-2-m cor-8">R$ 4000</span>
         </a>
       </li>
       <li>
-        <a href="./bicicletas/Nebula.html">
+        <a href="./bicicletas/nebula.html">
           <img src="./img/bicicletas/Nebula-home.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
