--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -101,7 +101,7 @@
       </li>
       <li>
         <a href="./Nebula.html">
-          <img src="../img/bicicletas/Nebula.jpg" alt="Bicicleta preta">
+          <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
         </a>
