alteração de link

--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -100,7 +100,7 @@
         </a>
       </li>
       <li>
-        <a href="./Nebula.html">
+        <a href="./nebula.html">
           <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
