--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -100,8 +100,8 @@
         </a>
       </li>
       <li>
-        <a href="./Nebula.html">
-          <img src="../img/bicicletas/Nebula.jpg" alt="Bicicleta preta">
+        <a href="./nebula.html">
+          <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta preta">
           <h3 class="font-1-xl">Nebula Cosmic</h3>
           <span class="font-2-m cor-8">R$ 3999</span>
         </a>
