--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -160,7 +160,7 @@
     </div>
   </footer>
 
-  <script src="./js/script.js"></script>
+  <script src="../js/script.js"></script>
 </body>
 
 </html>
